server/src/YmlToBdlParser.ts
// Generated from src/YmlToBdl.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { YmlToBdlListener } from "./YmlToBdlListener";
import { YmlToBdlVisitor } from "./YmlToBdlVisitor";


export class YmlToBdlParser extends Parser {
	public static readonly INTERFACE = 1;
	public static readonly IMPLEMENTATION = 2;
	public static readonly EXTENDS = 3;
	public static readonly FUNCTION = 4;
	public static readonly METHOD = 5;
	public static readonly TEXT_METHOD = 6;
	public static readonly TEXT_FUNCTION = 7;
	public static readonly FIELD = 8;
	public static readonly CLASSPROPERTIES = 9;
	public static readonly EXTERN = 10;
	public static readonly COMPLETE = 11;
	public static readonly SYNONYM = 12;
	public static readonly OVERRIDE = 13;
	public static readonly ARGS = 14;
	public static readonly IF_EXPR = 15;
	public static readonly IF = 16;
	public static readonly THEN = 17;
	public static readonly ELSE = 18;
	public static readonly ENUM = 19;
	public static readonly FOREACH = 20;
	public static readonly RETURN = 21;
	public static readonly LOCAL = 22;
	public static readonly TRUE = 23;
	public static readonly FALSE = 24;
	public static readonly SWITCH = 25;
	public static readonly CASE = 26;
	public static readonly DEFAULT = 27;
	public static readonly BREAK = 28;
	public static readonly STATIC = 29;
	public static readonly WHILE = 30;
	public static readonly SEMICOLON = 31;
	public static readonly COMMA = 32;
	public static readonly COLON = 33;
	public static readonly DOT = 34;
	public static readonly MULTIVALUED_EXPRESSION = 35;
	public static readonly FIELD_INTRO = 36;
	public static readonly REPLACE_FIELD_VALUE_INTRO = 37;
	public static readonly REMOVE_FIELD = 38;
	public static readonly ADD_FIELD = 39;
	public static readonly INLINE_DECL_INTRO = 40;
	public static readonly OPEN_PAR = 41;
	public static readonly CLOSE_PAR = 42;
	public static readonly OPEN_BRACKET = 43;
	public static readonly CLOSE_BRACKET = 44;
	public static readonly OPEN_BRACE = 45;
	public static readonly CLOSE_BRACE = 46;
	public static readonly SINGLE_QUOTE = 47;
	public static readonly BACKSLASH = 48;
	public static readonly QUESTION_MARK = 49;
	public static readonly AT = 50;
	public static readonly EQUAL_COMP = 51;
	public static readonly NOT_EQUALS = 52;
	public static readonly LESS_OR_EQUAL = 53;
	public static readonly GREATE_OR_EQUAL = 54;
	public static readonly STRICT_LESS = 55;
	public static readonly STRICT_GREAT = 56;
	public static readonly COND_AND = 57;
	public static readonly COND_OR = 58;
	public static readonly EQUAL_ASSIGNMENT = 59;
	public static readonly MULTIVALUED_ASSIGNMENT = 60;
	public static readonly OPEN_GRANULE = 61;
	public static readonly CLOSE_GRANULE = 62;
	public static readonly OPERATOR = 63;
	public static readonly DATE = 64;
	public static readonly STRING = 65;
	public static readonly DOCUMENTATION = 66;
	public static readonly WS = 67;
	public static readonly DOUBLE = 68;
	public static readonly INTEGER = 69;
	public static readonly YMLID = 70;
	public static readonly ID = 71;
	public static readonly PREPROCESSING = 72;
	public static readonly LINE_COMMENT = 73;
	public static readonly MULTILINE_COMMENT = 74;
	public static readonly GRANULE = 75;
	public static readonly RULE_expressionMarker = 0;
	public static readonly RULE_ymlId = 1;
	public static readonly RULE_kaoFile = 2;
	public static readonly RULE_ymlEntity = 3;
	public static readonly RULE_yenum = 4;
	public static readonly RULE_enumElement = 5;
	public static readonly RULE_classDeclaration = 6;
	public static readonly RULE_classImplementation = 7;
	public static readonly RULE_override = 8;
	public static readonly RULE_overrideInstruction = 9;
	public static readonly RULE_classDeclarationIntro = 10;
	public static readonly RULE_extendsBlock = 11;
	public static readonly RULE_parentClassName = 12;
	public static readonly RULE_synonym = 13;
	public static readonly RULE_classAttributeDeclaration = 14;
	public static readonly RULE_memberDeclaration = 15;
	public static readonly RULE_memberType = 16;
	public static readonly RULE_path = 17;
	public static readonly RULE_ymlIdOrPath = 18;
	public static readonly RULE_field = 19;
	public static readonly RULE_commonField = 20;
	public static readonly RULE_local_variable_decl = 21;
	public static readonly RULE_localField = 22;
	public static readonly RULE_returnField = 23;
	public static readonly RULE_classPropertiesBlock = 24;
	public static readonly RULE_documentation = 25;
	public static readonly RULE_valueOrCondition = 26;
	public static readonly RULE_hashMapKeyValue = 27;
	public static readonly RULE_hashMapValue = 28;
	public static readonly RULE_value = 29;
	public static readonly RULE_instruction_forEach = 30;
	public static readonly RULE_instruction_ifExprBlock = 31;
	public static readonly RULE_ifExprBlock = 32;
	public static readonly RULE_bool = 33;
	public static readonly RULE_nonArithmeticValue = 34;
	public static readonly RULE_instanciationVariable = 35;
	public static readonly RULE_expression = 36;
	public static readonly RULE_functionCall = 37;
	public static readonly RULE_indexedCall = 38;
	public static readonly RULE_functionArgument = 39;
	public static readonly RULE_chainedCall = 40;
	public static readonly RULE_inlineDeclaration = 41;
	public static readonly RULE_inlineOperation = 42;
	public static readonly RULE_fieldValue = 43;
	public static readonly RULE_function = 44;
	public static readonly RULE_argsBlock = 45;
	public static readonly RULE_localBlock = 46;
	public static readonly RULE_staticBlock = 47;
	public static readonly RULE_methodDeclaration = 48;
	public static readonly RULE_methodIntro = 49;
	public static readonly RULE_argumentList = 50;
	public static readonly RULE_mandatoryArgs = 51;
	public static readonly RULE_mandatoryArgDecl = 52;
	public static readonly RULE_optionalArgs = 53;
	public static readonly RULE_optionalArgDecl = 54;
	public static readonly RULE_argOptionList = 55;
	public static readonly RULE_argOptionBlock = 56;
	public static readonly RULE_order1Block = 57;
	public static readonly RULE_instanciationCondition = 58;
	public static readonly RULE_order1FullCondition = 59;
	public static readonly RULE_combinedComparison = 60;
	public static readonly RULE_comparison = 61;
	public static readonly RULE_comparisonOperator = 62;
	public static readonly RULE_instruction_multivaluedAssignment = 63;
	public static readonly RULE_instruction_assignment = 64;
	public static readonly RULE_conditionBlock = 65;
	public static readonly RULE_order0Condition = 66;
	public static readonly RULE_instruction_switchCase_withValue = 67;
	public static readonly RULE_instruction_switchCase_asIf = 68;
	public static readonly RULE_instructionCase = 69;
	public static readonly RULE_instructionDefault = 70;
	public static readonly RULE_instruction_break = 71;
	public static readonly RULE_instruction_ifElse = 72;
	public static readonly RULE_instruction_if = 73;
	public static readonly RULE_instruction_while = 74;
	public static readonly RULE_instruction_return = 75;
	public static readonly RULE_instruction_chainedCall = 76;
	public static readonly RULE_instruction = 77;
	public static readonly RULE_actionBlock = 78;
	public static readonly RULE_arithmeticExpression = 79;
	public static readonly RULE_existentialOperator = 80;
	public static readonly RULE_variableBlockContent = 81;
	public static readonly RULE_staticDeclaration = 82;
	public static readonly RULE_externDeclaration = 83;
	public static readonly RULE_list = 84;
	public static readonly RULE_listWithBrace = 85;
	public static readonly RULE_granule = 86;
	public static readonly RULE_complete = 87;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"expressionMarker", "ymlId", "kaoFile", "ymlEntity", "yenum", "enumElement", 
		"classDeclaration", "classImplementation", "override", "overrideInstruction", 
		"classDeclarationIntro", "extendsBlock", "parentClassName", "synonym", 
		"classAttributeDeclaration", "memberDeclaration", "memberType", "path", 
		"ymlIdOrPath", "field", "commonField", "local_variable_decl", "localField", 
		"returnField", "classPropertiesBlock", "documentation", "valueOrCondition", 
		"hashMapKeyValue", "hashMapValue", "value", "instruction_forEach", "instruction_ifExprBlock", 
		"ifExprBlock", "bool", "nonArithmeticValue", "instanciationVariable", 
		"expression", "functionCall", "indexedCall", "functionArgument", "chainedCall", 
		"inlineDeclaration", "inlineOperation", "fieldValue", "function", "argsBlock", 
		"localBlock", "staticBlock", "methodDeclaration", "methodIntro", "argumentList", 
		"mandatoryArgs", "mandatoryArgDecl", "optionalArgs", "optionalArgDecl", 
		"argOptionList", "argOptionBlock", "order1Block", "instanciationCondition", 
		"order1FullCondition", "combinedComparison", "comparison", "comparisonOperator", 
		"instruction_multivaluedAssignment", "instruction_assignment", "conditionBlock", 
		"order0Condition", "instruction_switchCase_withValue", "instruction_switchCase_asIf", 
		"instructionCase", "instructionDefault", "instruction_break", "instruction_ifElse", 
		"instruction_if", "instruction_while", "instruction_return", "instruction_chainedCall", 
		"instruction", "actionBlock", "arithmeticExpression", "existentialOperator", 
		"variableBlockContent", "staticDeclaration", "externDeclaration", "list", 
		"listWithBrace", "granule", "complete",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'interface'", "'implementation'", "'extends'", undefined, 
		"'method'", "'textMethod'", "'TextFunction'", "'field'", "'classProperties'", 
		"'extern'", "'complete'", "'synonym'", "'override'", "'args'", "'ifExpr'", 
		"'if'", "'then'", "'else'", "'enum'", "'foreach'", "'return'", "'local'", 
		"'true'", "'false'", "'switch'", "'case'", "'default'", "'break'", "'static'", 
		"'while'", "';'", "','", "':'", "'.'", "'>>'", "'-->'", "'==>'", "'---'", 
		"'+++'", "'->'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'''", "'\\'", 
		"'?'", "'@'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "'&&'", "'||'", 
		"'='", "':='",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "INTERFACE", "IMPLEMENTATION", "EXTENDS", "FUNCTION", "METHOD", 
		"TEXT_METHOD", "TEXT_FUNCTION", "FIELD", "CLASSPROPERTIES", "EXTERN", 
		"COMPLETE", "SYNONYM", "OVERRIDE", "ARGS", "IF_EXPR", "IF", "THEN", "ELSE", 
		"ENUM", "FOREACH", "RETURN", "LOCAL", "TRUE", "FALSE", "SWITCH", "CASE", 
		"DEFAULT", "BREAK", "STATIC", "WHILE", "SEMICOLON", "COMMA", "COLON", 
		"DOT", "MULTIVALUED_EXPRESSION", "FIELD_INTRO", "REPLACE_FIELD_VALUE_INTRO", 
		"REMOVE_FIELD", "ADD_FIELD", "INLINE_DECL_INTRO", "OPEN_PAR", "CLOSE_PAR", 
		"OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_BRACE", "CLOSE_BRACE", "SINGLE_QUOTE", 
		"BACKSLASH", "QUESTION_MARK", "AT", "EQUAL_COMP", "NOT_EQUALS", "LESS_OR_EQUAL", 
		"GREATE_OR_EQUAL", "STRICT_LESS", "STRICT_GREAT", "COND_AND", "COND_OR", 
		"EQUAL_ASSIGNMENT", "MULTIVALUED_ASSIGNMENT", "OPEN_GRANULE", "CLOSE_GRANULE", 
		"OPERATOR", "DATE", "STRING", "DOCUMENTATION", "WS", "DOUBLE", "INTEGER", 
		"YMLID", "ID", "PREPROCESSING", "LINE_COMMENT", "MULTILINE_COMMENT", "GRANULE",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(YmlToBdlParser._LITERAL_NAMES, YmlToBdlParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return YmlToBdlParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "YmlToBdl.g4"; }

	// @Override
	public get ruleNames(): string[] { return YmlToBdlParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return YmlToBdlParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(YmlToBdlParser._ATN, this);
	}
	// @RuleVersion(0)
	public expressionMarker(): ExpressionMarkerContext {
		let _localctx: ExpressionMarkerContext = new ExpressionMarkerContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, YmlToBdlParser.RULE_expressionMarker);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 176;
			_la = this._input.LA(1);
			if (!(_la === YmlToBdlParser.DOT || _la === YmlToBdlParser.MULTIVALUED_EXPRESSION)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ymlId(): YmlIdContext {
		let _localctx: YmlIdContext = new YmlIdContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, YmlToBdlParser.RULE_ymlId);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 178;
			this.match(YmlToBdlParser.YMLID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public kaoFile(): KaoFileContext {
		let _localctx: KaoFileContext = new KaoFileContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, YmlToBdlParser.RULE_kaoFile);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 183;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << YmlToBdlParser.INTERFACE) | (1 << YmlToBdlParser.FUNCTION) | (1 << YmlToBdlParser.METHOD) | (1 << YmlToBdlParser.TEXT_METHOD) | (1 << YmlToBdlParser.TEXT_FUNCTION) | (1 << YmlToBdlParser.EXTERN) | (1 << YmlToBdlParser.COMPLETE) | (1 << YmlToBdlParser.ENUM))) !== 0) || _la === YmlToBdlParser.YMLID) {
				{
				{
				this.state = 180;
				_localctx._entities = this.ymlEntity();
				}
				}
				this.state = 185;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 186;
			this.match(YmlToBdlParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ymlEntity(): YmlEntityContext {
		let _localctx: YmlEntityContext = new YmlEntityContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, YmlToBdlParser.RULE_ymlEntity);
		try {
			this.state = 194;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case YmlToBdlParser.INTERFACE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 188;
				this.classDeclaration();
				}
				break;
			case YmlToBdlParser.YMLID:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 189;
				this.staticDeclaration();
				}
				break;
			case YmlToBdlParser.COMPLETE:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 190;
				this.complete();
				}
				break;
			case YmlToBdlParser.ENUM:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 191;
				this.yenum();
				}
				break;
			case YmlToBdlParser.FUNCTION:
			case YmlToBdlParser.METHOD:
			case YmlToBdlParser.TEXT_METHOD:
			case YmlToBdlParser.TEXT_FUNCTION:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 192;
				this.function();
				}
				break;
			case YmlToBdlParser.EXTERN:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 193;
				this.externDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public yenum(): YenumContext {
		let _localctx: YenumContext = new YenumContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, YmlToBdlParser.RULE_yenum);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 196;
			this.match(YmlToBdlParser.ENUM);
			this.state = 197;
			_localctx._yid = this.ymlId();
			this.state = 198;
			this.match(YmlToBdlParser.OPEN_BRACE);
			this.state = 207;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 199;
				this.enumElement();
				this.state = 204;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === YmlToBdlParser.COMMA) {
					{
					{
					this.state = 200;
